implemented mute and umute button features

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
         "scripting",
         "tabs",
         "activeTab",
-        "tabGroups"
+        "tabGroups",
+        "storage"
     ],
     "version": "1.0.0"
 }
