--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Tabs Collector",
-    "description": "A Chrome Extension to help uou deal with the too many tabs open in Chrome pronlem.",
+    "description": "A Chrome Extension designed to help you manage and organize multiple open tabs, categorizing them for easier navigation and control.",
     "icons": {
         "128": "/images/icon-128x128.png"
     },
